# effective_mobile

./: CMakeLists.txt  README.md  list_serializer.cpp  list_serializer.h  main.cpp
